Changed the categories of some parts.

--- a/config.org
+++ b/config.org
@@ -6,24 +6,10 @@ This makes makes it so emacs isn't constantly leaving files such as '#file#' or 
   (setq auto-save-default nil)
 #+END_SRC
 
-** Removing ugly toolbar, scrollbar, and menubar from GUI
-Want an ugly toolbar to make emacs easier to use, despite the keyboard focus? No? Then disable them.
-#+BEGIN_SRC emacs-lisp
-  (tool-bar-mode -1)
-  (menu-bar-mode -1)
-  (scroll-bar-mode -1)
-#+END_SRC
-
 ** Inhibiting the startup screen, so I don't get bothered by a tutorial
 No really, if you've already done the tutorial, this isn't really necessary to have. Dashboard works wonders, though.
 #+BEGIN_SRC emacs-lisp
   (setq inhibit-startup-screen t)
-#+END_SRC
-
-** Setting line numbers to run solely in programming modes
-I dislike when I have line numbers in terminal modes, but it's damn near essential for actual programming work.
-#+BEGIN_SRC emacs-lisp
-  (add-hook 'prog-mode-hook 'display-line-numbers-mode)
 #+END_SRC
 
 ** Adding an alias for yes/no prompts, setting bash as the default shell
@@ -36,6 +22,25 @@ I don't know why emacs forces you to type "yes", but whatever. Bash can be subst
   (ad-activate 'term)
 #+END_SRC
 
+** Scrolling (making it not move the screen)
+#+BEGIN_SRC emacs-lisp
+  (setq scroll-conservatively 100)
+#+END_SRC
+* Visual additions
+** Removing ugly toolbar, scrollbar, and menubar from GUI
+Want an ugly toolbar to make emacs easier to use, despite the keyboard focus? No? Then disable them.
+#+BEGIN_SRC emacs-lisp
+  (tool-bar-mode -1)
+  (menu-bar-mode -1)
+  (scroll-bar-mode -1)
+#+END_SRC
+
+** Setting line numbers to run solely in programming modes
+I dislike when I have line numbers in terminal modes, but it's damn near essential for actual programming work.
+#+BEGIN_SRC emacs-lisp
+  (add-hook 'prog-mode-hook 'display-line-numbers-mode)
+#+END_SRC
+
 ** Font
 Sets to Iosevka, 10 pt. Set it to whatever you like.
 #+BEGIN_SRC emacs-lisp
@@ -43,7 +48,6 @@ Sets to Iosevka, 10 pt. Set it to whatever you like.
 	       '(font . "Iosevka-10"))
 #+END_SRC
 
-* Visual additions
 ** Base16 themes
 Some nice themes, I use tomorrow-night, though you can change this to whatever you want.
 #+BEGIN_SRC emacs-lisp
