--- a/config.org
+++ b/config.org
@@ -93,3 +93,8 @@ Makes the Org bullets nicer. Perhaps to actually make Emacs more visually appeal
     (org-babel-load-file (expand-file-name "~/.emacs.d/config.org")))
   (global-set-key (kbd "C-c r") 'config-reload)
 #+END_SRC
+* Magit
+#+BEGIN_SRC emacs-lisp
+  (use-package magit
+    :ensure t)
+#+END_SRC
