--- a/config.org
+++ b/config.org
@@ -7,6 +7,8 @@ Since this is a literal *window manager* (seriously, I'm still impressed that em
 - =ttf-iosevka=, default font specified in the config, change it in the config for your preferred font of choice.
 *** Telega.el
 - =telegram-tdlib=, available in the AUR.
+*** Miscellaneous
+Make sure to have a ~/.authinfo file to login to ERC.
 ** General Emacs settings
 *** Removing backup files and autosave
 #+BEGIN_SRC emacs-lisp
@@ -74,22 +76,11 @@ Since this is a literal *window manager* (seriously, I'm still impressed that em
   (global-set-key "\C-z" 'undo)
 #+END_SRC
 
-*** Window movement
-#+BEGIN_SRC emacs-lisp
-  (global-set-key (kbd "s-<left>") 'windmove-left)
-  (global-set-key (kbd "s-<right>") 'windmove-right)
-  (global-set-key (kbd "s-<up>") 'windmove-up)
-  (global-set-key (kbd "s-<down>") 'windmove-down)
 #+END_SRC
 *** Move buffers around
 #+BEGIN_SRC emacs-lisp
   (use-package buffer-move
-    :ensure t
-    :bind (("s-S-<left>" . 'buf-move-left)
-	   ("s-S-<right>" . 'buf-move-right)
-	   ("s-S-<up>" . 'buf-move-up)
-	   ("s-S-<down>" . 'buf-move-down)))
-	 
+    :ensure t)
 #+END_SRC
 *** Reload configuration
 #+BEGIN_SRC emacs-lisp
@@ -111,13 +102,27 @@ Since this is a literal *window manager* (seriously, I'm still impressed that em
     :config
     (require 'exwm-config)
     (require 'exwm-randr)
+    (require 'exwm-systemtray)
+    (exwm-systemtray-enable)
     (setq exwm-workspace-number 10)
     (setq exwm-randr-workspace-output-plist '(0 "HDMI-A-0" 1 "HDMI-A-0" 2 "HDMI-A-0" 3 "HDMI-A-0" 4 "HDMI-A-0" 5 "DVI-D-0" 6 "DVI-D-0" 7 "DVI-D-0" 8 "DVI-D-0" 9 "DVI-D-0"))
-  
+    (display-time-mode 1)
     ;; Bindings
     (exwm-input-set-key (kbd "s-r") #'exwm-reset)
     (exwm-input-set-key (kbd "s-k") #'exwm-workspace-delete)
     (exwm-input-set-key (kbd "s-w") #'exwm-workspace-swap)
+
+    ;; Bindings for window movement
+    (setq exwm-input-global-keys
+      `((,(kbd "s-<up>") . windmove-up)
+        (,(kbd "s-<down>") . windmove-down)
+        (,(kbd "s-<left>") . windmove-left)
+        (,(kbd "s-<right>") . windmove-right)
+	(,(kbd "s-S-<up>") . buf-move-up)
+	(,(kbd "s-S-<down>") . buf-move-down)
+	(,(kbd "s-S-<left>") . buf-move-left)
+	(,(kbd "s-S-<right>") . buf-move-right)))
+
     (dotimes (i 10)
       (exwm-input-set-key (kbd (format "s-%d" i))
 			  `(lambda ()
@@ -128,8 +133,8 @@ Since this is a literal *window manager* (seriously, I'm still impressed that em
 			  (interactive (list (read-shell-command "$ ")))
 			  (start-process-shell-command command nil command)))
 
-    (push ?\C-q exwm-input-prefix-keys)
-    (define-key exwm-mode-map [?\C-q] #'exwm-input-send-next-key)
+ 
+    (define-key exwm-mode-map [?\C-q] 'exwm-input-send-next-key)
 
     (exwm-input-set-simulation-keys
        '(
@@ -153,21 +158,6 @@ Since this is a literal *window manager* (seriously, I'm still impressed that em
 	 ;; search
 	 ([?\C-s] . ?\C-f)))
 
-    (dolist (k '(XF86AudioLowerVolume
-		 XF86AudioRaiseVolume
-		 XF86PowerOff
-		 XF86AudioMute
-		 XF86AudioPlay
-		 XF86AudioStop
-		 XF86AudioPrev
-		 XF86AudioNext
-		 XF86ScreenSaver
-		 XF68Back
-		 XF86Forward
-		 Scroll_Lock
-		 print))
-      (cl-pushnew k exwm-input-prefix-keys))
-
     (exwm-enable)
     (exwm-randr-enable))
 #+END_SRC
@@ -175,4 +165,18 @@ Since this is a literal *window manager* (seriously, I'm still impressed that em
 #+BEGIN_SRC emacs-lisp
   (use-package telega
     :ensure t)
+#+END_SRC
+** ERC
+#+BEGIN_SRC emacs-lisp
+
+(setq auth-sources '("~/.authinfo"))
+(setq erc-prompt-for-password nil)
+;; Keybindings
+(defun start-irc ()
+"Connect to Freenode, with Emacs."
+(interactive)
+(erc-tls :server "irc.freenode.net" :port 6697 
+:nick "protons_")
+(setq erc-autojoin-channels-alist '(("freenode.net" "#emacs" "#exwm"))))
+
 #+END_SRC
