--- a/config.org
+++ b/config.org
@@ -123,8 +123,8 @@ Completion is provided by [[http://company-mode.github.io/][company]], and the [
     (push 'company-lsp company-backends))
 #+END_SRC
 **** Magit
-This installs a package called [[https://github.com/magit/magit][magit]], which allows you to use git within emacs itself. It also configures 
-the bindings for =magit-status=, so one can do all the operations 
+This installs a package called [[https://github.com/magit/magit][magit]], which allows you to use git within Emacs itself. It also configures 
+the bindings for =magit-status=, so one can commit files and push them to a repository in Emacs
 #+BEGIN_SRC emacs-lisp
   (use-package magit
     :ensure t
