--- a/config.org
+++ b/config.org
@@ -66,7 +66,7 @@ In this configuration, I use =use-package= to automatically install the packages
  as well as to setup their configurations.
 *** Visuals
 **** Org bullets
-This sets up some nice bullets for org-mode that look better than the default star characters used in Emacs.
+This sets up some nice bullets for org-mode that look better than the default asterisks used in Emacs.
 #+BEGIN_SRC emacs-lisp
   (use-package org-bullets
       :ensure t
