--- a/config.org
+++ b/config.org
@@ -61,9 +61,14 @@ undo like most other programs.
   (global-unset-key "\C-z")
   (global-set-key "\C-z" 'undo)
 #+END_SRC
+*** =M-x shell= prompt fix
+This fixes the prompt being removable from =M-x shell= by backspacing.
+#+BEGIN_SRC emacs-lisp
+  (setq comint-prompt-read-only t)
+#+END_SRC
 ** Packages
-In this configuration, I use =use-package= to automatically install the packages,
- as well as to setup their configurations.
+In this configuration, I use =use-package= to automatically install the packages, 
+as well as to setup their configurations.
 *** Visuals
 **** Org bullets
 This sets up some nice bullets for org-mode that look better than the default asterisks used in Emacs.
@@ -123,8 +128,8 @@ Completion is provided by [[http://company-mode.github.io/][company]], and the [
     (push 'company-lsp company-backends))
 #+END_SRC
 **** Magit
-This installs a package called [[https://github.com/magit/magit][magit]], which allows you to use git within Emacs itself. It also configures 
-the bindings for =magit-status=, so one can commit files and push them to a repository in Emacs
+This installs a package called [[https://github.com/magit/magit][magit]], which allows you to use git within emacs itself. It also configures 
+the bindings for =magit-status=, so one can actually use magit with its own seperate buffer in emacs.
 #+BEGIN_SRC emacs-lisp
   (use-package magit
     :ensure t
